--- a/Maravilhosa/index.html
+++ b/Maravilhosa/index.html
@@ -20,22 +20,80 @@
     </nav>
 
     <!-- Cabeçalho -->
+    <header class="header">
+      <div class="container-header">
+        <div class="header-titulo">
+            <h1>The future is famale coders.</h1>
+            <a class="header-botao">Saiba mais</a>
+           </div>
+           <div>
+               <div class="header-container-img">
 
+               </div>
+            <div>
+                <img class="header-maravilhosa-img" src="./img/header_maravilhosa.jpg" alt="">
+            </div>
+           </div>
+          
+      </div>
+    </header>
    
 
     <!-- Secao Maravilhosa -->
 
-   
+   <section class="maravilhosa">
+       <div>
+        <h2>Frida Kahlo</h2>
+       </div>
+       <div>
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis optio, ab labore perferendis sit sint quas nemo aperiam quos consequatur voluptate hic totam corrupti officia repellendus dolore veritatis alias odit?</p>
+       </div>
 
+       <div>
+           <img src="" alt="">
+       </div>
+       <div>
+           <h2>Sua história</h2>
+           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem cum molestiae praesentium alias excepturi magni possimus sequi! Numquam sequi doloribus possimus dolores laudantium nostrum a ea commodi! Quisquam, iste. Ut?</p>
+           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis nam eligendi doloremque aut sed, expedita sit dolor odit officiis debitis, nihil reprehenderit blanditiis omnis quaerat deleniti magnam laboriosam, quae architecto!</p>
+       </div>
 
+   </section>
 
    <!-- AUTORA -->
-   
+   <section>
+       <div>
+           <h2>Sobre a autora</h2>
+           <div>
+               <img src="" alt="">
+               <div>
+                   <h3>Isabella</h3>
+                   <p>
+                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum optio tempora quaerat ut cupiditate officiis fugit a suscipit quas sint, fuga eveniet tempore inventore explicabo libero est aliquam enim at!
+                   </p>
+               </div>
+           </div>
+       </div>
+   </section>
 
 
     <!-- Footer -->
 
-   
+   <footer>
+       <div>
+           <ul>
+            <li><a href="#" target="_blank">Home</a></li>
+               <li><a href="https://reprograma.com.br/" target="_blank">Reprograma</a> </li>
+           </ul>
+           <img src="./img/logo-white.png" alt="">
+           <div>
+               <a href="https://www.facebook.com/isabella.brandao.562/">Facebook</a>
+               <a href="https://twitter.com/escorprincess">Twitter</a>
+               <a href="https://www.instagram.com/bellabrandoni/?hl=pt-br">Instagram</a>
+               <a href="https://www.linkedin.com">Linkedin</a>
+           </div>
+       </div>
+   </footer>
 
 
 
