Adicionado estilho a secao maravilhosa

--- a/Maravilhosa/index.html
+++ b/Maravilhosa/index.html
@@ -42,21 +42,24 @@
     <!-- Secao Maravilhosa -->
 
    <section class="maravilhosa">
-       <div>
-        <h2>Frida Kahlo</h2>
+       <div class="container-maravilhosa">
+        <div>
+            <h2 class="maravilhosa-titulo">Frida Kahlo</h2>
+           </div>
+           <div class="maravilhosa-boxBorder">
+            <p class="boxBorder-texto"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis optio, ab labore perferendis sit sint quas nemo aperiam quos consequatur voluptate hic totam corrupti officia repellendus dolore veritatis alias odit?</p>
+           </div>
+    
+           <div class="container-suaHistoria">
+               <img class="suaHistoria-imagem" src="./img/perfil_ingrid_silva.jpg" alt="">
+           </div>
+           <div class="suaHistoria-texto">
+               <h2 class="suaHistoria-texto">Sua história</h2>
+               <p class="suaHistoria-titulo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem cum molestiae praesentium alias excepturi magni possimus sequi! Numquam sequi doloribus possimus dolores laudantium nostrum a ea commodi! Quisquam, iste. Ut?</p>
+               <p class="suaHistoria-pararafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis nam eligendi doloremque aut sed, expedita sit dolor odit officiis debitis, nihil reprehenderit blanditiis omnis quaerat deleniti magnam laboriosam, quae architecto!</p>
+           </div>
        </div>
-       <div>
-        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis optio, ab labore perferendis sit sint quas nemo aperiam quos consequatur voluptate hic totam corrupti officia repellendus dolore veritatis alias odit?</p>
-       </div>
-
-       <div>
-           <img src="" alt="">
-       </div>
-       <div>
-           <h2>Sua história</h2>
-           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem cum molestiae praesentium alias excepturi magni possimus sequi! Numquam sequi doloribus possimus dolores laudantium nostrum a ea commodi! Quisquam, iste. Ut?</p>
-           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis nam eligendi doloremque aut sed, expedita sit dolor odit officiis debitis, nihil reprehenderit blanditiis omnis quaerat deleniti magnam laboriosam, quae architecto!</p>
-       </div>
+      
 
    </section>
 
