Adicionado estilo ao footer

--- a/Maravilhosa/index.html
+++ b/Maravilhosa/index.html
@@ -24,7 +24,7 @@
       <div class="container-header">
         <div class="header-titulo">
             <h1>The future is famale coders.</h1>
-            <a class="header-botao">Saiba mais</a>
+            <a class="header-button">Saiba mais</a>
            </div>
            <div>
                <div class="header-container-img">
@@ -54,8 +54,8 @@
                <img class="suaHistoria-imagem" src="./img/perfil_ingrid_silva.jpg" alt="">
            </div>
            <div class="suaHistoria-texto">
-               <h2 class="suaHistoria-texto">Sua história</h2>
-               <p class="suaHistoria-titulo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem cum molestiae praesentium alias excepturi magni possimus sequi! Numquam sequi doloribus possimus dolores laudantium nostrum a ea commodi! Quisquam, iste. Ut?</p>
+               <h2 class="suaHistoria-titulo">Sua história</h2>
+               <p class="suaHistoria-paragrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem cum molestiae praesentium alias excepturi magni possimus sequi! Numquam sequi doloribus possimus dolores laudantium nostrum a ea commodi! Quisquam, iste. Ut?</p>
                <p class="suaHistoria-pararafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis nam eligendi doloremque aut sed, expedita sit dolor odit officiis debitis, nihil reprehenderit blanditiis omnis quaerat deleniti magnam laboriosam, quae architecto!</p>
            </div>
        </div>
@@ -65,10 +65,10 @@
 
    <!-- AUTORA -->
    <section>
-       <div>
-           <h2>Sobre a autora</h2>
-           <div>
-               <img src="" alt="">
+       <div class="autora">
+           <h2 class="autora-titulo">Sobre a autora</h2>
+           <div class="autora-sobre">
+               <img class="autora-imagem" src="./img/perfil_ingrid_silva.jpg" alt="">
                <div>
                    <h3>Isabella</h3>
                    <p>
@@ -82,9 +82,9 @@
 
     <!-- Footer -->
 
-   <footer>
-       <div>
-           <ul>
+   <footer class="footer">
+       <div class="footer-menu">
+           <ul class="footer-link">
             <li><a href="#" target="_blank">Home</a></li>
                <li><a href="https://reprograma.com.br/" target="_blank">Reprograma</a> </li>
            </ul>
@@ -96,6 +96,12 @@
                <a href="https://www.linkedin.com">Linkedin</a>
            </div>
        </div>
+       
+        <div class="footer-cc">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis nam non vel velit pariatur asperiores incidunt eos fugit enim? A sit similique suscipit voluptates iure omnis odit debitis vitae eveniet.</p>
+        </div>
+     
+
    </footer>
 
 
