--- a/Maravilhosa/index.html
+++ b/Maravilhosa/index.html
@@ -23,7 +23,7 @@
     <header class="header">
       <div class="container-header">
         <div class="header-titulo">
-            <h1>The future is famale coders.</h1>
+            <h1>The future is female coders.</h1>
             <a class="header-button">Saiba mais</a>
            </div>
            <div>
@@ -72,10 +72,16 @@
            <div class="autora-sobre">
                <img class="autora-imagem" src="./img/isabella.jpg" alt="">
                <div>
-                   <h3>Isabella</h3>
+                   <h3>Isabella Brandão</h3>
                    <p>
-                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum optio tempora quaerat ut cupiditate officiis fugit a suscipit quas sint, fuga eveniet tempore inventore explicabo libero est aliquam enim at!
+                    Isabella Brandão, estudante de programação front-end na Reprograma, cursa letras na Universidade Federal de Lavras.
                    </p>
+
+                   <p>
+                    Escorpiana, apaixonada por tecnologia e história, busca inspirar garotas negras a descobrirem através de figuras históricas negras  a potência necessária para se encontrar através dos códigos.
+
+                   </p>
+
                </div>
            </div>
        </div>
