adicionados links redes sociais

--- a/Maravilhosa/index.html
+++ b/Maravilhosa/index.html
@@ -24,7 +24,7 @@
       <div class="container-header">
         <div class="header-titulo">
             <h1>The future is female coders.</h1>
-            <a class="header-button">Saiba mais</a>
+            <a class ="header-button" href="https://www.linkedin.com/in/isabella-brandao-82b726185/" target="_blank">Saiba mais </a>
            </div>
            <div>
                <div class="header-container-img">
@@ -98,16 +98,16 @@
            </ul>
            <img src="./img/logo-white.png" alt="">
            <div>
-            <a href="https://www.facebook.com/ReprogramaBr/" target="_blank">
+            <a href="https://www.facebook.com/isabella.brandao.562" target="_blank">
                 <img src="./img/icon-facebook.png" alt="Íconde do Facebook">
             </a>
-            <a href="https://twitter.com/ReprogramaBr" target="_blank">
+            <a href="https://twitter.com/escorprincess" target="_blank">
                 <img src="./img/icon-twitter.png" alt="Ícone do Twitter">
             </a>
-            <a href="https://www.instagram.com/reprogramabr/" target="_blank">
+            <a href="https://www.instagram.com/bellabrandoni/" target="_blank">
                 <img src="./img/icon-instagram.png" alt="Ícone do Instagram">
             </a>
-            <a href="https://www.linkedin.com/company/reprogramabr/" target="_blank">
+            <a href="https://www.linkedin.com/in/isabella-brandao-82b726185/" target="_blank">
                 <img src="./img/icon-linkedin.png" alt="Ícone do LinkedIn">
             </a>
 
