--- a/Maravilhosa/index.html
+++ b/Maravilhosa/index.html
@@ -24,7 +24,7 @@
       <div class="container-header">
         <div class="header-titulo">
             <h1>The future is female coders.</h1>
-            <a class ="header-button" href="https://www.linkedin.com/in/isabella-brandao-82b726185/" target="_blank">Saiba mais </a>
+            <a class ="header-button" href="#maravilhosa-autora">Saiba mais </a>
            </div>
            <div>
                <div class="header-container-img">
@@ -47,7 +47,7 @@
             <h2 class="maravilhosa-titulo">Luisa Mahin</h2>
            </div>
            <div class="maravilhosa-boxBorder">
-            <p class="boxBorder-texto"> Uma negra, africana livre, da Costa da Mina”, é como Luiz Gama começa a descrever sua mãe Luiza Mahin na carta que escreveu ao seu amigo Lucio de Mendonça em 1880. Uma mulher mítica idealizada e reverenciada pela comunidade negra por sua trajetória, representada pela memória histórica de uma quituteira, ex-escrava de ganho, símbolo de resistência negra e herança cultural para população afrodescendente.</p>
+            <p class="boxBorder-texto"> "Uma negra, africana livre, da Costa da Mina”, é como Luiz Gama começa a descrever sua mãe Luiza Mahin na carta que escreveu ao seu amigo Lucio de Mendonça em 1880. Uma mulher mítica idealizada e reverenciada pela comunidade negra por sua trajetória, representada pela memória histórica de uma quituteira, ex-escrava de ganho, símbolo de resistência negra e herança cultural para população afrodescendente.</p>
            </div>
     
            <div class="container-suaHistoria">
@@ -66,7 +66,7 @@
    </section>
 
    <!-- AUTORA -->
-   <section>
+   <section id="maravilhosa-autora">
        <div class="autora">
            <h2 class="autora-titulo">Sobre a autora</h2>
            <div class="autora-sobre">
